# anti-judol

./: .gitignore  README.md  README_EN.md  anti_judol.py  pyproject.toml  setup.ps1  setup.sh  youtube_scraper.py
.github/workflows/: ci.yaml
anti_judol/: download.py  kill.py  model.py  normalizer.py
anti_judol/actions/: auth.py  remover.py
data/models/: model.pkl
tests/: test_browser_download.py  test_browser_downloader.py  test_kill.py  test_model.py  test_normalizer.py
tests/benchmark/: test_lemmatize_performance.py  test_remove_stopwords_performance.py
tests/normalizer/: conftest.py  test_call_method.py  test_exception_handling.py  test_lemmatize.py  test_merge_words.py  test_normalize.py  test_sanitize.py
